<resources>
    <string name="app_name">Meeting Attendance</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-up screen -->
    <string name="register_title">Sign Up</string>
    <string name="have_account">Have an account? </string>
    <string name="login_text_view">Log In</string>
    <string name="meeting_attendance_logo">Meeting attendance logo</string>
    <string name="google_register_button">Join with Google</string>
    <string name="microsoft_register_button">Join with Microsoft</string>

    <!-- Log-in screen -->
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="OR_text_view">OR</string>
    <string name="forgot_password">Forgot password</string>
    <string name="google_login_button">Log in with Google</string>
    <string name="microsoft_login_button">Log in with Microsoft</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">Error: Plus.PeopleApi.getCurrentPerson returned null.
        Ensure that the Google+ API is enabled for your project, you have a properly configured
        google-services.json file and that your device has an internet connection. </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained from
     https://console.developers.google.com/ -->
    <string name="server_client_id"> 472533206523-uv0nt5s9upo0svrdjv5up9tug803p8i6.apps.googleusercontent.com</string>
</resources>


